<resources>
    <string name="app_name">ContactsListApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="college">College</string>
    <string name="gender">Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_others">Others</string>
    <string name="save">Save</string>
    <string name="mobile">Mobile</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
