<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_name"/>


    <TextView
        android:id="@+id/contact_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/phone_text"
        app:layout_constraintStart_toStartOf="parent" />

   <TextView
        android:id="@+id/contact_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
       android:text="@string/email"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/contact_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:text="@string/age"
        app:layout_constraintTop_toBottomOf="@+id/contact_email"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintStart_toStartOf="parent">

     <RadioButton
         android:id="@+id/male"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/radio_male"/>

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female"/>

        <RadioButton
            android:id="@+id/others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_others"/>

    </RadioGroup>

   <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
       android:text="@string/city"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/college"
       />

  <TextView
        android:id="@+id/college"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
      android:text="@string/college"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/college"
        app:layout_constraintVertical_bias="0.763" />


</androidx.constraintlayout.widget.ConstraintLayout>